# xueqiu_mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/xueqiu_mcp/: __init__.py  __main__.py  server.py
