[project]
name = "snowball-mcp"
version = "0.2.5"
description = "基于雪球API的MCP服务，让您通过Claude或其他AI助手轻松获取股票数据"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "xunzhimeng" }
]
keywords = ["mcp", "xueqiu", "stock", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.1.2",
    "pysnowball>=0.1.3",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xunzhimeng/xueqiu_mcp"
Repository = "https://github.com/xunzhimeng/xueqiu_mcp"

[project.scripts]
snowball-mcp = "xueqiu_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xueqiu_mcp"]
